--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
 }
 
 header {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
@@ -20,12 +20,6 @@ header {
   transition: transform 0.4s ease, opacity 0.4s ease;
   z-index: 1000;
   opacity: 1;
-}
-
-header.fixed {
-  position: fixed;
-  top: 0;
-  left: 0;
 }
 
 header.hidden {
@@ -78,17 +72,26 @@ header a:hover {
 }
 
 .hero {
-  min-height: 100vh;
   display: flex;
-  align-items: end;
+  align-items: center;
+  margin-top: 10rem;
+  justify-content: center;
   text-align: center;
   background-color: white;
   padding: 5rem 2rem;
   position: relative;
-  overflow: hidden;
-  background-image: url("./assets/Wallpaper.png");
+  background-image: url('./assets/office.webp');
   background-repeat: no-repeat;
-  background-position: bottom right;
+  background-size: cover;
+  background-position: center;
+}
+
+.hero::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.8);
+  z-index: 0;
 }
 
 .hero-bg {
@@ -125,6 +128,7 @@ header a:hover {
 
 .hero-content i {
   font-size: 24px;
+  color: #fff;
 }
 
 .hero-content.visible {
@@ -136,7 +140,7 @@ header a:hover {
   font-family: 'Playfair Display', serif;
   font-size: 2.5rem;
   line-height: 1.3;
-  color: #0D1B2A;
+  color: #fff;
   margin-bottom: 1.2rem;
   font-weight: 600;
   letter-spacing: -0.4px;
@@ -145,11 +149,24 @@ header a:hover {
 .hero h1 span {
   color: #006D77;
   font-weight: 700;
+  text-shadow: 0 0 5px rgba(255, 255, 255, 0.6);
+  animation: glow 1s ease-in-out infinite alternate;
+}
+
+@keyframes glow {
+  0% {
+    text-shadow: 0 0 6px rgba(255, 255, 255, 0.6),
+                 0 0 12px rgba(255, 255, 255, 0.4);
+  }
+  100% {
+    text-shadow: 0 0 14px rgba(255, 255, 255, 1),
+                 0 0 25px rgba(255, 255, 255, 0.8);
+  }
 }
 
 .hero p {
   font-size: 1.15rem;
-  color: #333333;
+  color: #fff;
   margin-bottom: 2rem;
   max-width: 720px;
   margin-left: auto;
@@ -825,10 +842,6 @@ header a:hover {
 }
 
 @media (max-width: 1440px) {
-  .hero {
-    min-height: 85vh;
-  }
-
   .hero-content {
     max-width: 600px;
   }
@@ -845,7 +858,6 @@ header a:hover {
   
   .hero {
     align-items: flex-start;
-    min-height: 150vh;
   }
 
   .hero h1 {
@@ -980,13 +992,8 @@ header a:hover {
     gap: 0.5rem;
   }
 
-  .hero {
-    background-image: url('./assets/Wallpaper-celular.png');
-    background-position: center;
-  }
-
   .hero h1 {
-    font-size: 1.2rem;
+    font-size: 1.5rem;
   }
 
   .hero p {
